Starting to work on Goe 2

--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
+    "@blueprintjs/docs-theme": "^2.1.1",
+    "@types/moment": "^2.13.0",
+    "@types/react-redux": "^5.0.16",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-transition-group": "^2.0.8",
+    "axios": "^0.18.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts-ts": "2.15.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,6 +27,7 @@
     "@types/node": "^9.6.5",
     "@types/react": "^16.3.10",
     "@types/react-dom": "^16.0.5",
+    "react-scripts-ts": "2.15.1",
     "typescript": "^2.8.1"
   }
 }
