--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/docs-theme": "^2.1.1",
+    "@types/gapi": "^0.0.35",
     "@types/moment": "^2.13.0",
     "@types/react-redux": "^5.0.16",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
     "axios": "^0.18.0",
+    "googleapis": "^28.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "readline": "^1.3.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
