--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-redux": "^5.0.16",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
+    "@types/underscore": "^1.8.8",
     "axios": "^0.18.0",
     "googleapis": "^27.0.0",
     "react": "^16.3.1",
@@ -16,7 +17,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "readline": "^1.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
