--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/docs-theme": "^2.1.1",
+    "@types/lodash": "^4.14.107",
     "@types/moment": "^2.13.0",
     "@types/react-redux": "^5.0.16",
     "@types/react-router-dom": "^4.2.6",
@@ -12,6 +13,7 @@
     "@types/underscore": "^1.8.8",
     "axios": "^0.18.0",
     "googleapis": "^27.0.0",
+    "lodash": "^4.17.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
