--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "axios": "^0.18.0",
     "googleapis": "^27.0.0",
     "lodash": "^4.17.5",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.1",
     "readline": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/node": "^9.6.5",
-    "@types/react": "^16.3.10",
+    "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
     "react-scripts-ts": "2.15.1",
     "typescript": "^2.8.1"
