--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@blueprintjs/docs-theme": "^2.1.1",
     "@types/lodash": "^4.14.107",
     "@types/moment": "^2.13.0",
+    "@types/react-dnd": "^2.0.36",
+    "@types/react-dnd-html5-backend": "^2.1.9",
     "@types/react-redux": "^5.0.16",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
@@ -15,6 +17,8 @@
     "googleapis": "^27.0.0",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
