--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "Fikav2",
+  "name": "atlasp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/docs-theme": "^2.1.1",
-    "@types/lodash": "^4.14.107",
-    "@types/moment": "^2.13.0",
-    "@types/react-redux": "^5.0.16",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/react-transition-group": "^2.0.8",
-    "@types/underscore": "^1.8.8",
     "axios": "^0.18.0",
-    "googleapis": "^27.0.0",
+    "googleapis": "^32.0.0",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -20,6 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.3.1",
     "readline": "^1.3.0",
+    "redoodle": "^2.3.2",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
   },
@@ -30,11 +25,20 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@types/node": "^9.6.5",
+    "@types/jest": "^23.1.0",
+    "@types/node": "^10.3.3",
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
-    "react-scripts-ts": "2.15.1",
+    "@types/lodash": "^4.14.107",
+    "@types/moment": "^2.13.0",
+    "@types/react-redux": "^6.0.2",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-transition-group": "^2.0.8",
+    "@types/underscore": "^1.8.8",
+    "husky": "^0.14.3",
+    "prettier": "1.13.5",
+    "pretty-quick": "^1.6.0",
+    "react-scripts-ts": "2.16.0",
     "typescript": "^2.8.1"
   }
 }
