--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "readline": "^1.3.0",
     "redoodle": "^2.3.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "underscore": "^1.8.3"
   },
   "scripts": {
@@ -26,11 +27,11 @@
   },
   "devDependencies": {
     "@types/jest": "^23.1.0",
+    "@types/lodash": "^4.14.107",
+    "@types/moment": "^2.13.0",
     "@types/node": "^10.3.3",
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
-    "@types/lodash": "^4.14.107",
-    "@types/moment": "^2.13.0",
     "@types/react-redux": "^6.0.2",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
