--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
     "@types/underscore": "^1.8.8",
-    "husky": "^0.14.3",
-    "prettier": "1.13.5",
+    "eslint-plugin-prettier": "^2.6.1",
+    "prettier": "^1.13.6",
     "pretty-quick": "^1.6.0",
     "react-scripts-ts": "2.16.0",
     "typescript": "^2.8.1"
