--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "readline": "^1.3.0",
     "redoodle": "^2.3.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
+    "twilio": "^3.17.4",
     "underscore": "^1.8.3"
   },
   "scripts": {
@@ -26,17 +28,17 @@
   },
   "devDependencies": {
     "@types/jest": "^23.1.0",
+    "@types/lodash": "^4.14.107",
+    "@types/moment": "^2.13.0",
     "@types/node": "^10.3.3",
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
-    "@types/lodash": "^4.14.107",
-    "@types/moment": "^2.13.0",
     "@types/react-redux": "^6.0.2",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
     "@types/underscore": "^1.8.8",
-    "husky": "^0.14.3",
-    "prettier": "1.13.5",
+    "eslint-plugin-prettier": "^2.6.1",
+    "prettier": "^1.13.6",
     "pretty-quick": "^1.6.0",
     "react-scripts-ts": "2.16.0",
     "typescript": "^2.8.1"
