--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
+    "@blueprintjs/datetime": "^2.0.3",
     "@blueprintjs/docs-theme": "^2.1.1",
     "axios": "^0.18.0",
     "googleapis": "^32.0.0",
