--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
           name: Install
           command: yarn install
       - run: 
+          name: Lint
+          command: yarn lint
+      - run: 
           name: Test
           command: yarn test
       - run: 
@@ -25,7 +28,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install && yarn compile
+          command: yarn install
       - save_cache:
           name: Save yarn package cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
