--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/docs-theme": "^2.1.1",
+    "@blueprintjs/icons": "^3.0.0",
     "axios": "^0.18.0",
     "googleapis": "^32.0.0",
     "lodash": "^4.17.5",
