--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/docs-theme": "^2.1.1",
     "@blueprintjs/icons": "^3.0.0",
+    "@types/classnames": "^2.2.5",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "googleapis": "^32.0.0",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
