--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: yarn install
       - run: 
           name: Test
-          command: yarn test
+          command: yarn test && yarn lint
       - run: 
           name: Build
           command: yarn build
@@ -25,7 +25,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install && yarn compile
+          command: yarn install
       - save_cache:
           name: Save yarn package cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
