--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "^1.13.6",
     "pretty-quick": "^1.6.0",
     "react-scripts-ts": "2.16.0",
+    "tslint": "^5.11.0",
     "typescript": "^2.8.1"
   },
   "collectCoverageFrom": [
