--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
+    "baseUrl": ".",
     "outDir": "build/dist",
+    "module": "esnext",
     "target": "es2017",
     "lib": ["dom", "es2017", "es7"],
-    "module": "es2015",
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
+    "declaration": true,
+    "experimentalDecorators": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
