--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       #     command: CI=true yarn test
       - run: 
           name: Build
-          command: yarn build
+          command: CI=true yarn build
   install:
     docker:
       - image: circleci/node:7.10
