--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/node:7.10
     steps:
+      - add_ssh_keys
       - checkout
       - run:
           name: Install
@@ -21,6 +22,7 @@ jobs:
     docker:
       - image: circleci/node:7.10
     steps:
+      - add_ssh_keys
       - checkout
       - restore_cache:
           name: Restore yarn package cache
