Add autocomplete component (#7)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/docs-theme": "^2.1.1",
+    "@types/classnames": "^2.2.5",
     "axios": "^0.18.0",
     "googleapis": "^32.0.0",
     "husky": "^0.14.3",
@@ -25,8 +26,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "precommit": "pretty-quick --staged",
     "lint": "tslint src/**/*.ts && tslint src/**/*.tsx",
+    "lint:fix": "tslint src/**/*.ts --fix && tslint src/**/*.tsx --fix",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "prettier": "^1.13.6",
     "pretty-quick": "^1.6.0",
     "react-scripts-ts": "2.16.0",
+    "tslint": "^5.11.0",
     "typescript": "^2.8.1"
   },
   "collectCoverageFrom": [
