--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,17 @@ jobs:
     docker:
       - image: circleci/node:7.10
     steps:
+      - add_ssh_keys
       - checkout
       - run:
           name: Install
           command: yarn install
       - run: 
-          name: Test
-          command: yarn test
+          name: Lint
+          command: yarn lint
+      # - run: 
+      #     name: Test
+      #     command: CI=true yarn test
       - run: 
           name: Build
           command: yarn build
@@ -18,6 +22,7 @@ jobs:
     docker:
       - image: circleci/node:7.10
     steps:
+      - add_ssh_keys
       - checkout
       - restore_cache:
           name: Restore yarn package cache
@@ -25,7 +30,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install && yarn compile
+          command: yarn install
       - save_cache:
           name: Save yarn package cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
