--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
+    "@blueprintjs/datetime": "^3.0.0",
     "@blueprintjs/docs-theme": "^2.1.1",
     "@blueprintjs/icons": "^3.0.0",
     "@types/classnames": "^2.2.5",
