--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
+    "@blueprintjs/datetime": "^3.0.0",
     "@blueprintjs/docs-theme": "^2.1.1",
+    "@blueprintjs/icons": "^3.0.0",
     "@types/classnames": "^2.2.5",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "googleapis": "^32.0.0",
-    "husky": "^0.14.3",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -17,8 +19,10 @@
     "react-transition-group": "^2.3.1",
     "readline": "^1.3.0",
     "redoodle": "^2.3.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "tslint-config-prettier": "^1.13.0",
     "twilio": "^3.17.4",
     "underscore": "^1.8.3"
   },
@@ -28,6 +32,7 @@
     "test": "react-scripts-ts test --env=jsdom",
     "lint": "tslint src/**/*.ts && tslint src/**/*.tsx",
     "lint:fix": "tslint src/**/*.ts --fix && tslint src/**/*.tsx --fix",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -42,10 +47,11 @@
     "@types/react-transition-group": "^2.0.8",
     "@types/underscore": "^1.8.8",
     "eslint-plugin-prettier": "^2.6.1",
-    "prettier": "^1.13.6",
-    "pretty-quick": "^1.6.0",
+    "prettier": "^1.13.7",
     "react-scripts-ts": "2.16.0",
     "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.3.1",
+    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.8.1"
   },
   "collectCoverageFrom": [
