--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
 jobs:
   install:
+    working_directory: ~/atlasP
     docker:
       - image: circleci/node:7.10
-    working_directory: ~/atlasP
     steps:
       - checkout
       - restore_cache:
@@ -18,11 +18,19 @@ jobs:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
-  build_test:
+  test:
+    working_directory: ~/atlasP
     docker:
       - image: circleci/node:7.10
-    working_directory: ~/atlasP
     steps:
+      - checkout
+      - restore_cache:
+          name: Restore yarn package cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install dependencies
+          command: yarn install
       - run: 
           name: Lint
           command: yarn lint
@@ -30,16 +38,24 @@ jobs:
           name: Build
           command: yarn build
   deploy:
-    docker:
-      - image: circleci/python:2.7-jessie
     working_directory: ~/atlasP
+    docker:
+      - image: circleci/node:7.10
     steps:
+      - checkout
+      - restore_cache:
+          name: Restore yarn package cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install dependencies
+          command: yarn install
+      - run: 
+          name: Build
+          command: yarn build
       - run:
           name: Install awscli
-          command: sudo pip install awscli
-      - run:
-          name: Install awscli
-          command: sudo pip install awscli
+          command: sudo apt-get -y -qq install awscli
       - run:
           name: Deploying to S3
           command: aws s3 sync build/ s3://atlasp --delete --region us-west-1
@@ -48,12 +64,12 @@ workflows:
   build_and_test:
     jobs:
       - install
-      - build_test:
+      - test:
           requires:
             - install
       - deploy:
           requires:
-            - build_test
+            - test
           filters:
             branches:
               only: master
