--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@blueprintjs/docs-theme": "^2.1.1",
     "@blueprintjs/icons": "^3.0.0",
     "@types/classnames": "^2.2.5",
+    "@types/react-responsive": "^3.0.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "googleapis": "^32.0.0",
@@ -15,6 +16,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "react-responsive": "^5.0.0",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.3.1",
     "readline": "^1.3.0",
