--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^23.1.0",
     "@types/lodash": "^4.14.107",
     "@types/moment": "^2.13.0",
