--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasp",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.1.1",
@@ -34,10 +34,12 @@
     "test": "react-scripts-ts test --env=jsdom",
     "lint": "tslint src/**/*.ts && tslint src/**/*.tsx",
     "lint:fix": "tslint src/**/*.ts --fix && tslint src/**/*.tsx --fix",
+    "prettier": "prettier src/**/*.ts --write && prettier src/**/*.tsx --write",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^23.1.0",
     "@types/lodash": "^4.14.107",
     "@types/moment": "^2.13.0",
