--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "@blueprintjs/datetime": "^3.0.0",
     "@blueprintjs/docs-theme": "^2.1.1",
     "@blueprintjs/icons": "^3.0.0",
-    "@types/classnames": "^2.2.5",
-    "@types/react-responsive": "^3.0.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "d3": "^5.7.0",
     "googleapis": "^32.0.0",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
@@ -29,7 +28,7 @@
     "underscore": "^1.8.3"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "dev": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "lint": "tslint src/**/*.ts && tslint src/**/*.tsx",
@@ -40,6 +39,8 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.5",
+    "@types/d3": "^5.0.0",
     "@types/jest": "^23.1.0",
     "@types/lodash": "^4.14.107",
     "@types/moment": "^2.13.0",
@@ -47,6 +48,7 @@
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
     "@types/react-redux": "^6.0.2",
+    "@types/react-responsive": "^3.0.2",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-transition-group": "^2.0.8",
     "@types/underscore": "^1.8.8",
