--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install
+          command: yarn install --production=false
       - save_cache:
           name: Save yarn package cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
@@ -30,7 +30,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install
+          command: yarn install --production=false
       - run: 
           name: Lint
           command: yarn lint
@@ -49,7 +49,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install
+          command: yarn install --production=false
       - run: 
           name: Build
           command: yarn build
@@ -58,7 +58,7 @@ jobs:
           command: sudo apt-get -y -qq install awscli
       - run:
           name: Deploying to S3
-          command: aws s3 sync build/ s3://atlasp --delete --region us-west-1
+          command: aws s3 sync build/ s3://atlasp --delete --region us-west-1 --cache-control max-age=86400
 workflows:
   version: 2
   build_and_test:
