Start compiling splash page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "4.2",
     "react-transition-group": "^2.3.1",
     "readline": "^1.3.0",
     "redoodle": "^2.3.2",
@@ -49,7 +49,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-redux": "^6.0.2",
     "@types/react-responsive": "^3.0.2",
-    "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-dom": "4.2.7",
     "@types/react-transition-group": "^2.0.8",
     "@types/underscore": "^1.8.8",
     "eslint-plugin-prettier": "^2.6.1",
