--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "d3": "5.0.0",
-    "googleapis": "^32.0.0",
+    "google-libphonenumber": "^3.1.14",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -18,13 +18,10 @@
     "react-responsive": "^5.0.0",
     "react-router-dom": "4.2",
     "react-transition-group": "^2.3.1",
-    "readline": "^1.3.0",
     "redoodle": "^2.3.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "tslint-config-prettier": "^1.13.0",
-    "twilio": "^3.17.4",
     "underscore": "^1.8.3"
   },
   "scripts": {
@@ -41,6 +38,7 @@
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.5",
     "@types/d3": "^5.0.0",
+    "@types/google-libphonenumber": "^7.4.17",
     "@types/jest": "^23.1.0",
     "@types/lodash": "^4.14.107",
     "@types/moment": "^2.13.0",
@@ -56,6 +54,7 @@
     "prettier": "^1.13.7",
     "react-scripts-ts": "2.16.0",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "^5.3.1",
     "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.8.1"
