--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "atlasp",
-  "version": "2.14.0",
+  "version": "2.15.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.6.1",
-    "@blueprintjs/datetime": "^3.0.0",
-    "@blueprintjs/docs-theme": "^2.1.1",
-    "@blueprintjs/icons": "^3.0.0",
+    "awesome-phonenumber": "^2.2.6",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "d3": "5.0.0",
-    "google-libphonenumber": "^3.1.14",
-    "lodash": "^4.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -21,8 +17,7 @@
     "redoodle": "^2.3.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "underscore": "^1.8.3"
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "dev": "react-scripts-ts start",
@@ -38,10 +33,7 @@
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.5",
     "@types/d3": "^5.0.0",
-    "@types/google-libphonenumber": "^7.4.17",
     "@types/jest": "^23.1.0",
-    "@types/lodash": "^4.14.107",
-    "@types/moment": "^2.13.0",
     "@types/node": "^10.3.3",
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
@@ -49,7 +41,6 @@
     "@types/react-responsive": "^3.0.2",
     "@types/react-router-dom": "4.2.7",
     "@types/react-transition-group": "^2.0.8",
-    "@types/underscore": "^1.8.8",
     "eslint-plugin-prettier": "^2.6.1",
     "prettier": "^1.13.7",
     "react-scripts-ts": "2.16.0",
@@ -57,22 +48,7 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "^5.3.1",
     "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.8.1"
-  },
-  "collectCoverageFrom": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "!src/**/*.test.ts",
-    "!src/**/*.test.tsx",
-    "!src/index.tsx",
-    "!src/registerServiceWorker.ts"
-  ],
-  "coverageThreshold": {
-    "global": {
-      "branches": 80,
-      "functions": 80,
-      "lines": 80,
-      "statements": 100
-    }
+    "typescript": "^2.8.1",
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
