--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasp",
-  "version": "2.16.0",
+  "version": "2.17.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.6.1",
@@ -20,14 +20,13 @@
     "reselect": "^3.0.1"
   },
   "scripts": {
-    "dev": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "lint": "tslint src/**/*.ts && tslint src/**/*.tsx",
     "lint:fix": "tslint src/**/*.ts --fix && tslint src/**/*.tsx --fix",
     "prettier": "prettier src/**/*.ts --write && prettier src/**/*.tsx --write",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json",
-    "eject": "react-scripts-ts eject"
+    "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -42,13 +41,22 @@
     "@types/react-router-dom": "4.2.7",
     "@types/react-transition-group": "^2.0.8",
     "eslint-plugin-prettier": "^2.6.1",
-    "prettier": "^1.13.7",
-    "react-scripts-ts": "2.16.0",
+    "husky": "^1.1.3",
+    "lint-staged": "^8.0.4",
+    "node-sass": "^4.10.0",
+    "prettier": "^1.15.1",
+    "react-scripts": "^2.1.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "^5.3.1",
     "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.8.1",
     "webpack-bundle-analyzer": "^3.0.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
