--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   install:
     working_directory: ~/atlasP
     docker:
-      - image: circleci/node:7.10
+      - image: circleci/node:chakracore-10.6.0-browsers
     steps:
       - checkout
       - restore_cache:
@@ -21,7 +21,7 @@ jobs:
   test:
     working_directory: ~/atlasP
     docker:
-      - image: circleci/node:7.10
+      - image: circleci/node:chakracore-10.6.0-browsers
     steps:
       - checkout
       - restore_cache:
@@ -40,7 +40,7 @@ jobs:
   deploy:
     working_directory: ~/atlasP
     docker:
-      - image: circleci/node:7.10
+      - image: circleci/node:chakracore-10.6.0-browsers
     steps:
       - checkout
       - restore_cache:
