--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   install:
     working_directory: ~/atlasP
     docker:
-      - image: circleci/node:chakracore-10.6.0-browsers
+      - image: circleci/node:10.8.0
     steps:
       - checkout
       - run:
@@ -12,7 +12,7 @@ jobs:
   test:
     working_directory: ~/atlasP
     docker:
-      - image: circleci/node:chakracore-10.6.0-browsers
+      - image: circleci/node:10.8.0
     steps:
       - checkout
       - run:
@@ -27,7 +27,7 @@ jobs:
   deploy:
     working_directory: ~/atlasP
     docker:
-      - image: circleci/node:chakracore-10.6.0-browsers
+      - image: circleci/node:10.8.0
     steps:
       - checkout
       - run:
