--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,17 @@ jobs:
       - image: circleci/node:10.8.0
     steps:
       - checkout
-      - restore_cache:		
-          name: Restore yarn package cache		
-          keys:		
+      - restore_cache:
+          name: Restore yarn package cache
+          keys:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
           command: yarn install --production=false
-      - save_cache:		
-          name: Save yarn package cache		
-          key: yarn-packages-{{ checksum "yarn.lock" }}		
-          paths:		
+      - save_cache:
+          name: Save yarn package cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+          paths:
             - ~/.cache/yarn
   test:
     working_directory: ~/atlasP
@@ -27,7 +27,7 @@ jobs:
       - restore_cache:
           name: Restore yarn package cache
           keys:
-            - yarn-packages-{{ checksum "yarn.lock" }
+            - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
           command: yarn install --production=false
@@ -43,9 +43,9 @@ jobs:
       - image: circleci/node:10.8.0
     steps:
       - checkout
-      - restore_cache:		
-          name: Restore yarn package cache		
-          keys:		
+      - restore_cache:
+          name: Restore yarn package cache
+          keys:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
