--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
     "redoodle": "^2.3.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "tslint-config-prettier": "^1.15.0"
   },
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "lint": "tslint src/**/*.ts && tslint src/**/*.tsx",
-    "lint:fix": "tslint src/**/*.ts --fix && tslint src/**/*.tsx --fix",
-    "prettier": "prettier src/**/*.ts --write && prettier src/**/*.tsx --write",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json"
+    "lint": "tslint -p .",
+    "lint:fix": "tslint -p . --fix"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -40,16 +39,10 @@
     "@types/react-responsive": "^3.0.2",
     "@types/react-router-dom": "4.2.7",
     "@types/react-transition-group": "^2.0.8",
-    "eslint-plugin-prettier": "^2.6.1",
-    "husky": "^1.1.3",
-    "lint-staged": "^8.0.4",
     "node-sass": "^4.10.0",
-    "prettier": "^1.15.1",
+    "prettier": "^1.15.2",
     "react-scripts": "^2.1.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-eslint-rules": "^5.3.1",
-    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.8.1",
     "webpack-bundle-analyzer": "^3.0.3"
   },
