--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasp",
-  "version": "2.21.2",
+  "version": "2.22.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.6.1",
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "d3": "5.0.0",
+    "lodash-es": "^4.17.11",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -32,6 +33,7 @@
     "@types/classnames": "^2.2.5",
     "@types/d3": "^5.0.0",
     "@types/jest": "^23.1.0",
+    "@types/lodash-es": "^4.17.1",
     "@types/node": "^10.3.3",
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
