--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasp",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.6.1",
@@ -22,6 +22,7 @@
     "tslint-config-prettier": "^1.15.0"
   },
   "scripts": {
+    "analyze": "yarn build -- --stats && webpack-bundle-analyzer build/bundle-stats.json",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
