--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "3.4.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.6.1",
+    "@blueprintjs/core": "^3.9.0",
     "awesome-phonenumber": "^2.2.6",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "d3": "5.0.0",
     "lodash-es": "^4.17.11",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
     "react-router-dom": "4.2",
@@ -36,8 +36,9 @@
     "@types/jest": "^23.1.0",
     "@types/lodash-es": "^4.17.1",
     "@types/node": "^10.3.3",
-    "@types/react": "^16.3.11",
-    "@types/react-dom": "^16.0.5",
+    "@types/prop-types": "^15.5.6",
+    "@types/react": "^16.7.13",
+    "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.2",
     "@types/react-responsive": "^3.0.2",
     "@types/react-router-dom": "4.2.7",
